syntax = "proto3";

option csharp_namespace = "ECommerce.Catalog.Api.Protos";

package BasketApi;

service CustomerBasket {
	rpc GetBasket(GetBasketRequest) returns(GetBasketResponse);
	rpc CreateBasket(CreateBasketRequest) returns(CreateBasketResponse);
	rpc DeleteBasket(DeleteBasketRequest) returns(DeleteBasketResponse);
}

message CreateBasketRequest {
	string customerid = 3;
}

message CreateBasketResponse {
	bool isvalid = 1;
    string message = 2;
}

message GetBasketRequest {
	string customerid = 1;
}

message GetBasketResponse {
	Basket basket = 1;
}

message DeleteBasketRequest {
	string id = 1;
}

message DeleteBasketResponse {
	bool isvalid = 1;
    string message = 2;
}

message Basket {
	string id = 1;
	double value = 2;
	string customerid = 3;
	repeated BasketItem items = 4;
}

message BasketItem {
	string id = 1;
	string name = 2;
	int32 quantity = 3;
	double value = 4;
	string image = 5;
	string basketid = 6;
}