syntax = "proto3";

option csharp_namespace = "ECommerce.Basket.Api.Protos";

package BasketApi;

service ShoppingBasketService {
	rpc GetBasketByCustomer(GetBasketByCustomerRequest) returns(GetBasketByCustomerResponse);
	rpc GetBasketById(GetBasketByIdRequest) returns(GetBasketByIdResponse);
	rpc CreateBasket(CreateBasketRequest) returns(CreateBasketResponse);
	rpc DeleteBasket(DeleteBasketRequest) returns(DeleteBasketResponse);
	rpc UpdateBasket(UpdateBasketRequest) returns(UpdateBasketResponse);
	rpc GetAllBasket(GetAllBasketRequest) returns(GetAllBasketResponse);

	rpc GetBasketItem(GetBasketItemRequest) returns(GetBasketItemResponse);
	rpc GetBasketItemByProduct(GetBasketItemByProductRequest) returns(GetBasketItemByProductResponse);
	rpc AddBasketItem(AddBasketItemRequest) returns(AddBasketItemResponse);
	rpc RemoveBasketItem(RemoveBasketItemRequest) returns(RemoveBasketItemResponse);
}

message GetAllBasketRequest {
	string customerid = 1;
}

message GetAllBasketResponse {
	repeated ShoppingBasket baskets = 1;
}

message GetBasketByIdRequest {
	string id = 1;
}

message GetBasketByIdResponse {
	ShoppingBasket basket = 1;
}

message CreateBasketRequest {
	string id = 1;
	string customerid = 2;
}

message CreateBasketResponse {
	bool isvalid = 1;
    string message = 2;
}

message GetBasketByCustomerRequest {
	string customerid = 1;
}

message GetBasketByCustomerResponse {
	ShoppingBasket basket = 1;
}

message DeleteBasketRequest {
	string id = 1;
}

message DeleteBasketResponse {
	bool isvalid = 1;
    string message = 2;
}

message UpdateBasketRequest {
	string id = 1;
	bool isended = 2;
	string customerid = 3;
}

message UpdateBasketResponse {
	bool isvalid = 1;
    string message = 2;
}

message GetBasketItemByProductRequest {
	string produtid = 1;
}

message GetBasketItemByProductResponse {
	BasketItem item = 1;
}

message GetBasketItemRequest {
	string id = 1;
}

message GetBasketItemResponse {
	BasketItem item = 1;
}

message AddBasketItemRequest {
	string id = 1;
	string name = 2;
    int32 quantity = 3;
    double value = 4;
    string image = 5;
    string productid = 6;
    string shoppingbasketid = 7;
}

message AddBasketItemResponse {
	bool isvalid = 1;
    string message = 2;
}

message RemoveBasketItemRequest {
	string id = 1;
	string basketid = 2;
}

message RemoveBasketItemResponse {
	bool isvalid = 1;
    string message = 2;
}

message ShoppingBasket {
	string id = 1;
	double value = 2;
	string customerid = 3;
	bool isended = 4;
	repeated BasketItem items = 5;
}

message BasketItem {
	string id = 1;
	string name = 2;
	int32 quantity = 3;
	double value = 4;
	string image = 5;
	string productid = 6;
	string shoppingbasketid = 7;
}

message date {
	int32 day = 1;
	int32 month = 2;
	int32 year = 3;
}